fix spacing on index page

--- a/js-frontend/styles/style.css
+++ b/js-frontend/styles/style.css
@@ -36,7 +36,7 @@ input{
   body {
     height: 100vh;
     display: flex;
-    background: #060AB2;
+    background: #3E0000;
   }
   
   #cards-container {
